<resources>
    <string name="app_name">Foosh</string>
    <string name="nav_home">Početna stranica</string>
    <string name="open">Otvori</string>
    <string name="close">Zatvori</string>
    <string name="sign_in">Prijava</string>
    <string name="listing_date">Datum objave</string>
    <string name="listing_description">Opis</string>
    <string name="listing_description_add">Dodajte opis oglasa</string>
    <string name="listing_price">Cijena</string>
    <string name="interested">Zanima me</string>
    <string name="listing_add_new">Dodaj novi oglas</string>
    <string name="paying">Plaćam za uslugu</string>
    <string name="earning">Želim zaraditi</string>
    <string name="listing_title">Naslov oglasa</string>
    <string name="listing_location">Lokacija</string>
    <string name="listing_category">Kategorija oglasa</string>
    <string name="listing_category_pick">Odaberite kategoriju</string>
    <string name="add_listing_photos">Dodaj fotografije</string>
    <string name="currency">HRK</string>
    <string name="label_edit"><u>Uredi</u></string>
    <string name="label_about_me">O MENI</string>
    <string name="label_reviews">RECENZIJE</string>
    <string name="label_more">VIŠE</string>
    <string name="label_active_listings">AKTIVNI OGLASI</string>
    <string name="label_hiring">ZAPOŠLJAVANJE</string>
    <string name="label_work">RAD</string>
    <string name="search_settings">Postavke pretraživanja</string>
    <string name="sort_by">Sortiraj po</string>
    <string name="pick_category">Odaberi kategoriju</string>
    <string name="pick_city">Odaberi grad</string>
    <string name="price_range">Raspon cijena</string>
    <string name="price_from">od</string>
    <string name="price_to">do</string>
    <string name="price_between">KN -</string>
    <string name="done">ODABERI</string>
    <string name="save_changes">SPREMI PROMJENE</string>
    <string name="toast_not_all_fields_populated">Sva polja nisu popunjena!</string>
    <string name="toast_listing_succesfully_updated">Oglas je uspješno ažuriran!</string>
    <string name="toast_uploading">Učitavanje slika..</string>
    <string name="toast_upload_paused">Učitavanje je pauzirano</string>
    <string name="toast_cant_save_img">Slika ne može biti spremljena!</string>
    <string name="toast_listing_successfully_added">Uspješno dodano!"</string>
    <string name="toast_camera_granted">Pristup kameri dozvoljen!</string>
    <string name="toast_camera_denied">Pristup kameri odbijen!</string>
    <string name="toast_camera_not_found">Kamera uređaja nije nađena!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accept_deal_question"> želi sklopiti dogovor. Želite li potvrditi?\n</string>
    <string name="applicant_not_accepted_deal"> Korisnik nije potvrdio dogovor.\n</string>
    <string name="finish_job_applicant_hint">Gumb ZAVRŠI POSAO otvorit će skener QR koda s kojim je potrebno skenirati QR koda vlasnika oglasa.</string>
    <string name="finish_job_owner_hint">Gumb ZAVRŠI POSAO generirat će QR kod koji je potreban pokazati osobi s kojom ste dogovorili posao kako bi ga skenirala i tada ćete uspješno zatvoriti posao.</string>
    <string name="job_finished_text">Posao Završen</string>
    <string name="label_contact">KONTAKT</string>
    <string name="hintPhoneNumber">Kontakt broj</string>
    <string name="buttonTextAddCurrentNumber">DODAJ TRENUTNI BROJ MOBITELA</string>
    <string name="labelAboutMe">O meni</string>
    <string name="hintDisplayName">Ime</string>
    <string name="button_change_profile_picture">Promijeni sliku profila</string>
    <string name="button_save_profile_changes">POTVRDI PROMJENE</string>
    <string name="button_edit_profile">Uredi profil</string>
    <string name="hint_city">Grad</string>
    <string name="hint_location">Lokacija</string>
    <string name="toast_verification_mail_sent">Verifikacijska poruka poslana!</string>
    <string name="toast_error_sending_verification_mail">Greška pri slanju verifikacijske poruke!</string>
    <string name="toast_sign_in_canceled">Prijava otkazana!</string>
    <string name="toast_no_internet_connection">Niste povezani na internet.</string>
    <string name="unknown_error">Nepoznata greška!</string>
    <string name="take_picture">Slikaj!</string>
    <string name="label_firstname_lastname">Ime Prezime</string>
    <string name="button_make_deal">dogovori</string>
    <string name="label_title">Naslov</string>
    <string name="label_category">Kategorija</string>
    <string name="label_date">Datum</string>
    <string name="label_location">Lokacija</string>
    <string name="label_description">Opis</string>
    <string name="default_text">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusant doloremque laudantium, totam rem aperiam eaque ipsa.\n</string>
    <string name="button_interested">Zanima me</string>
    <string name="button_uninterested">Odjavi</string>
    <string name="button_message">Poruka</string>
    <string name="yes">da</string>
    <string name="no">ne</string>
    <string name="finish_job">Završi posao</string>
    <string name="label_list_of_applicants">Popis prijavljenih</string>
    <string name="email_verified">email potvrđen?</string>
    <string name="user_profile_photo">slika korisničkog profila</string>
    <string name="delete">Obriši</string>
    <string name="listing_image">Slika oglasa</string>
    <string name="main_feed_listing_image">Slika oglasa početne stranice</string>
    <string name="my_listing_picture">Slika oglasa</string>
    <string name="text_default">tekst</string>
    <string name="hint_pick_city">Odaberite grad</string>
    <string name="image">Slika</string>

</resources>