<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_listing_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:grid="http://schemas.android.com/apk/res-auto"

            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"

            android:layout_marginEnd="8dp"
            android:paddingTop="10dp"
            grid:columnCount="3"
            grid:layout_constraintEnd_toEndOf="parent"
            grid:layout_constraintHorizontal_bias="0.0"
            grid:layout_constraintStart_toStartOf="parent"
            grid:layout_constraintTop_toTopOf="parent"
            grid:rowCount="2">

            <TextView
                android:id="@+id/listingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/label_title"
                android:textSize="24sp"
                android:textStyle="bold"
                grid:layout_columnSpan="3" />

            <TextView
                android:id="@+id/listingCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/label_category"
                grid:layout_columnSpan="2" />

            <TextView
                android:id="@+id/listingDate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/label_date"
                grid:layout_columnSpan="1"
                grid:layout_gravity="right" />

        </android.support.v7.widget.GridLayout>

        <FrameLayout
            android:id="@+id/imageLayout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topLayout">


            <TextView
                android:id="@+id/behindImages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=""/>

            <android.support.v4.view.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

            <ImageView
                android:id="@+id/left_nav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24px" />

            <ImageView
                android:id="@+id/right_nav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:rotation="180"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24px" />

        </FrameLayout>

        <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:grid="http://schemas.android.com/apk/res-auto"
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:background="@color/colorAccentBackground"
            grid:layout_constraintEnd_toEndOf="parent"
            grid:layout_constraintHorizontal_bias="1.0"
            grid:layout_constraintStart_toStartOf="parent"
            grid:layout_constraintTop_toBottomOf="@+id/imageLayout"
            >

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/userProfileImage"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_margin="5dp"
                android:src="@drawable/avatar"
                app:civ_border_color="#FF000000"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/listingOwner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="18sp"
                android:text="@string/label_firstname_lastname"
                grid:layout_constraintTop_toTopOf="parent"
                grid:layout_constraintBottom_toBottomOf="parent"
                grid:layout_constraintStart_toEndOf="@id/userProfileImage"/>


            <android.support.v7.widget.AppCompatImageView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/ic_outline_location_on_24px"
                grid:layout_constraintEnd_toStartOf="@id/listingLocation"
                grid:layout_constraintTop_toTopOf="parent"
                grid:layout_constraintBottom_toBottomOf="@id/listingLocation"
                android:paddingTop="8dp"
                />

            <TextView
                android:id="@+id/listingLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="8dp"
                android:text="@string/label_location"
                android:textSize="18sp"
                grid:layout_constraintEnd_toEndOf="parent"
                grid:layout_constraintBottom_toTopOf="@id/ListingPrice"
                grid:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/ListingPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="8dp"
                android:text=""
                android:textSize="18sp"
                grid:layout_constraintEnd_toEndOf="parent"
                grid:layout_constraintBottom_toBottomOf="parent"
                grid:layout_constraintTop_toBottomOf="@id/listingLocation"
                />


        </android.support.constraint.ConstraintLayout>


        <TextView
            android:id="@+id/descriptionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:text="@string/label_description"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

        <me.biubiubiu.justifytext.library.JustifyTextView
            android:id="@+id/listingDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:text="@string/default_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTitle"/>





        <!-- APPLICANT VIEWING ACTIVE LISTING, CAN APPLY-->
        <Button
            android:id="@+id/buttonInterested"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/button_interested"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintTop_toBottomOf="@+id/listingDescription"
            android:visibility="gone"/>



        <!-- APPLICANT APPLIED, WAITING FOR DEAL -->
        <Button
            android:id="@+id/buttonUnapply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/button_uninterested"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonMessage"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone"/>
        <Button
            android:id="@+id/buttonMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/button_message"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toEndOf="@id/buttonUnapply"
            app:layout_constraintTop_toBottomOf="@+id/listingDescription"
            android:visibility="gone"/>




        <!-- APPLICANT ACCEPT DEAL -->
        <me.biubiubiu.justifytext.library.JustifyTextView
            android:id="@+id/acceptDealQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:layout_marginTop="5dp"
            android:text="@string/accept_deal_question"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listingDescription"
            android:visibility="gone"
            />
        <Button
            android:id="@+id/buttonAcceptDeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/yes"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonNotAcceptDeal"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toEndOf="@id/buttonUnapply"
            app:layout_constraintTop_toBottomOf="@+id/acceptDealQuestion"
            android:visibility="gone"/>
        <Button
            android:id="@+id/buttonNotAcceptDeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/no"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toEndOf="@id/buttonAcceptDeal"
            app:layout_constraintTop_toBottomOf="@+id/acceptDealQuestion"
            android:visibility="gone"/>


        <!-- APPLICANT - FINISH JOB -->
 <!--      <Button
            android:id="@+id/buttonFinishJob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/finish_job"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintTop_toBottomOf="@+id/listingDescription"
            android:visibility="gone"/>
        -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/listingModularApplicant"
            app:layout_constraintTop_toBottomOf="@id/listingDescription">

        </LinearLayout>



        <!-- OWNER - SHOW LIST OF APPLICANTS -->

        <TextView
            android:id="@+id/applicantsListTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:text="@string/label_list_of_applicants"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listingDescription"
            android:visibility="gone"/>
        <LinearLayout
            android:id="@+id/applicantsList"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/applicantsListTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone">

        </LinearLayout>


        <!-- OWNER SHOW - WAITING FOR APPLICANT -->
        <me.biubiubiu.justifytext.library.JustifyTextView
            android:id="@+id/applicantNotAccepted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:layout_marginTop="5dp"
            android:text="@string/applicant_not_accepted_deal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listingDescription"
            android:visibility="gone"

            />




        <!-- OWNER SHOW QR CODE - APPLICANT ACCEPTED THE DEAL -->
<!--
        <Button
            android:id="@+id/listingQrCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/listingDescription"
            android:visibility="gone"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/finish_job"
            android:textColor="@color/colorWhite"
            />
            -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/listingModularOwner"
            app:layout_constraintTop_toBottomOf="@id/listingDescription">

        </LinearLayout>
        <me.biubiubiu.justifytext.library.JustifyTextView
            android:id="@+id/finishJobOwnerHint"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listingModularOwner"
            android:text="@string/finish_job_owner_hint"
            />

        <me.biubiubiu.justifytext.library.JustifyTextView
            android:id="@+id/finishJobApplicantHint"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listingModularOwner"
            android:text="@string/finish_job_applicant_hint"
            />
        <TextView
            android:id="@+id/jobFinishedText"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="30sp"
            android:text="@string/job_finished_text"
            android:textColor="@color/colorGreen"
            app:layout_constraintTop_toBottomOf="@+id/listingDescription"

            />
    </android.support.constraint.ConstraintLayout>

</ScrollView>