<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_my_profile_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:grid="http://schemas.android.com/apk/res-auto"

            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            grid:columnCount="3"
            grid:layout_constraintHorizontal_bias="0.0"
            grid:rowCount="4">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/userProfileImage"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_margin="5dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/avatar"
                app:civ_border_color="#FF000000"
                app:layout_rowSpan="3" />

            <TextView
                android:id="@+id/userDisplayName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@+id/userProfileImage"
                grid:layout_columnSpan="2"
                grid:layout_rowWeight="1" />

            <ImageView

                android:id="@+id/imageEmailVerified"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                app:layout_constraintBottom_toTopOf="@+id/locationIcon"
                app:layout_constraintLeft_toRightOf="@id/userProfileImage"
                app:layout_constraintTop_toBottomOf="@+id/userDisplayName"
                app:srcCompat="@drawable/ic_baseline_check_circle_24px"
                grid:layout_rowWeight="1" />

            <TextView
                android:id="@+id/userEmail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                app:layout_constraintStart_toEndOf="@id/imageEmailVerified"
                app:layout_constraintTop_toBottomOf="@+id/userDisplayName"
                grid:layout_rowWeight="1" />


            <ImageView
                android:id="@+id/locationIcon"
                android:layout_height="match_parent"
                app:layout_constraintStart_toEndOf="@id/userProfileImage"
                app:layout_constraintTop_toBottomOf="@+id/imageEmailVerified"
                app:srcCompat="@drawable/ic_outline_location_on_24px"
                grid:layout_rowWeight="1" />

            <TextView
                android:id="@+id/userLocationName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/locationIcon"
                app:layout_constraintTop_toBottomOf="@id/userEmail"
                grid:layout_rowWeight="1" />



        </android.support.v7.widget.GridLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:id="@+id/aboutMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/label_about_me"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/userAboutMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorTextLightGray" />

            <TextView
                android:id="@+id/labelContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/label_contact"
                android:layout_marginTop="15dp"
                android:textSize="15sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/userContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:textColor="@color/colorTextLightGray" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">



            <Button
                android:id="@+id/editButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_edit_profile"
                android:textColor="@color/colorWhite"
                android:backgroundTint="@color/colorPrimary"/>
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>